--- a/src/FabLab/View/RegisterUser.fxml
+++ b/src/FabLab/View/RegisterUser.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -9,9 +10,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane prefHeight="270.0" prefWidth="413.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FabLab.View.RegisterUserController">
+<AnchorPane prefHeight="398.0" prefWidth="500.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FabLab.View.RegisterUserController">
    <children>
-      <GridPane layoutX="30.0" layoutY="28.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <GridPane layoutX="30.0" layoutY="28.0" prefHeight="272.0" prefWidth="480.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
             <Label prefHeight="29.0" prefWidth="91.0" styleClass="label-bright" text="Naam" />
             <Label prefHeight="29.0" prefWidth="91.0" styleClass="label-bright" text="Voornaam" GridPane.rowIndex="1" />
@@ -19,26 +20,35 @@
             <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" />
             <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="rolNumberTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label prefHeight="29.0" prefWidth="91.0" styleClass="label-bright" text="E-mailadres" GridPane.rowIndex="3" />
+            <TextField fx:id="emailAdressTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="studyComboBox" onAction="#handleStudySelect" prefHeight="33.0" prefWidth="153.0" promptText="Opleiding" GridPane.rowIndex="4" />
+            <TextField fx:id="studyTextField" prefWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="studyLabel" prefHeight="29.0" prefWidth="319.0" styleClass="label-bright" text="Opleiding" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
+            <Label fx:id="andereOpleidingLabel" prefHeight="29.0" prefWidth="319.0" styleClass="label-bright" text="andere opleiding:" GridPane.rowIndex="5" />
          </children>
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="91.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="10.0" prefWidth="302.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="142.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="338.0" minWidth="10.0" prefWidth="338.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="68.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="56.0" minHeight="0.0" prefHeight="43.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="51.0" minHeight="0.0" prefHeight="8.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="25.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="74.0" minHeight="5.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="109.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="134.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="110.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="101.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="50.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <Button id="register" layoutX="32.0" layoutY="166.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="60.0" prefWidth="140.0" styleClass="register" stylesheets="@FabLabApp_DarkTheme.css" text="Registreer">
+      <Button id="register" layoutX="62.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="60.0" prefWidth="140.0" styleClass="register" stylesheets="@FabLabApp_DarkTheme.css" text="Registreer">
          <font>
             <Font size="8.0" />
          </font>
       </Button>
-      <Button layoutX="226.0" layoutY="166.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="60.0" prefWidth="140.0" styleClass="register" text="Annuleer">
+      <Button layoutX="292.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="60.0" prefWidth="140.0" styleClass="register" text="Annuleer">
          <font>
             <Font size="20.0" />
          </font>
