--- a/src/FabLab/View/SelectionOverview.fxml
+++ b/src/FabLab/View/SelectionOverview.fxml
@@ -17,7 +17,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background">
                <children>
-                  <GridPane layoutY="25.0" prefHeight="202.0" prefWidth="309.0" AnchorPane.bottomAnchor="252.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="25.0">
+                  <GridPane layoutY="25.0" prefHeight="304.0" prefWidth="300.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="25.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="92.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="314.0" minWidth="10.0" prefWidth="208.0" />
@@ -26,6 +26,8 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
@@ -38,11 +40,15 @@
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                            </opaqueInsets></Label>
                         <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="Rolnummer:" underline="true" GridPane.rowIndex="2" />
-                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="User ID:" underline="true" GridPane.rowIndex="3" />
+                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="E-mailadres:" underline="true" GridPane.rowIndex="3" />
                         <Label fx:id="lastNameLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;naam&quot;" GridPane.columnIndex="1" />
                         <Label fx:id="firstNameLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;voornaam&quot;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Label fx:id="rolNumberLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;rolnummer&quot;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="userIDLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;user ID&quot;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="emailadressLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;e-mailadres&quot;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="Opleiding:" underline="true" GridPane.rowIndex="4" />
+                        <Label fx:id="studyLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;Opleiding&quot;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="User ID:" underline="true" GridPane.rowIndex="5" />
+                        <Label fx:id="userIDLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;user ID&quot;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                      <opaqueInsets>
                         <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
@@ -79,7 +85,7 @@
                                                 <Insets left="20.0" />
                                              </HBox.margin>
                                           </Label>
-                                          <Label fx:id="selectedMachineLabel" prefHeight="50.0" prefWidth="255.0">
+                                          <Label fx:id="selectedMachineLabel" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;">
                                              <HBox.margin>
                                                 <Insets right="5.0" />
                                              </HBox.margin>
@@ -96,7 +102,7 @@
                                                 <Insets left="20.0" />
                                              </HBox.margin>
                                           </Label>
-                                          <Label fx:id="selectedMaterialLabel" prefHeight="50.0" prefWidth="255.0">
+                                          <Label fx:id="selectedMaterialLabel" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;">
                                              <HBox.margin>
                                                 <Insets right="5.0" />
                                              </HBox.margin>
