--- a/src/FabLab/View/SelectionOverview.fxml
+++ b/src/FabLab/View/SelectionOverview.fxml
@@ -13,14 +13,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FabLab.View.SelectionOverviewController">
    <children>
-      <SplitPane dividerPositions="0.485" prefHeight="400.0" prefWidth="600.0" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.47" prefHeight="400.0" prefWidth="600.0" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background">
+          <AnchorPane maxWidth="376.0" minHeight="0.0" minWidth="376.0" prefHeight="479.0" prefWidth="376.0" styleClass="background">
                <children>
                   <GridPane layoutY="25.0" prefHeight="304.0" prefWidth="300.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="25.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="92.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="314.0" minWidth="10.0" prefWidth="208.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="108.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="314.0" minWidth="10.0" prefWidth="192.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -39,16 +39,16 @@
                            <opaqueInsets>
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                            </opaqueInsets></Label>
-                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="Rolnummer:" underline="true" GridPane.rowIndex="2" />
-                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="E-mailadres:" underline="true" GridPane.rowIndex="3" />
+                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="E-mailadres:" underline="true" GridPane.rowIndex="2" />
                         <Label fx:id="lastNameLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;naam&quot;" GridPane.columnIndex="1" />
                         <Label fx:id="firstNameLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;voornaam&quot;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="rolNumberLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;rolnummer&quot;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="emailadressLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;e-mailadres&quot;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="rolNumberLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;rolnummer&quot;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="Opleiding:" underline="true" GridPane.rowIndex="4" />
                         <Label fx:id="studyLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;Opleiding&quot;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                         <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="User ID:" underline="true" GridPane.rowIndex="5" />
                         <Label fx:id="userIDLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;user ID&quot;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label prefHeight="51.0" prefWidth="93.0" styleClass="label-bright" text="Rolnummer:" underline="true" GridPane.rowIndex="3" />
+                        <Label fx:id="emailadressLabel" prefHeight="51.0" prefWidth="210.0" styleClass="label-bright" text="&quot;e-mailadres&quot;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                      <opaqueInsets>
                         <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
@@ -56,7 +56,7 @@
                   </GridPane>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="479.0" prefWidth="452.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css">
                <children>
                   <VBox prefHeight="478.0" prefWidth="396.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -86,7 +86,7 @@
                                     <Insets left="20.0" />
                                  </HBox.margin>
                               </Label>
-                              <Label fx:id="selectedMachineLabel" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;">
+                              <Label fx:id="selectedMachineLabel" prefHeight="50.0" prefWidth="228.0">
                                  <HBox.margin>
                                     <Insets right="5.0" />
                                  </HBox.margin>
@@ -98,8 +98,9 @@
                         </HBox>
                         <GridPane prefHeight="186.0" prefWidth="388.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.0" minWidth="10.0" prefWidth="271.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="117.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="272.0" minWidth="10.0" prefWidth="204.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="114.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="71.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -111,40 +112,73 @@
                           </rowConstraints>
                            <children>
                               <Label prefHeight="50.0" prefWidth="85.0" text="materialen:" />
-                              <Label fx:id="selectedMaterialLabel1" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;" GridPane.rowIndex="1">
+                              <Label fx:id="selectedMaterialLabel1" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.rowIndex="1">
                                  <padding>
                                     <Insets right="5.0" />
                                  </padding>
                               </Label>
-                              <Label fx:id="selectedMaterialLabel2" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;" GridPane.rowIndex="2">
+                              <Label fx:id="selectedMaterialLabel2" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.rowIndex="2">
                                  <padding>
                                     <Insets right="5.0" />
                                  </padding>
                               </Label>
-                              <Label fx:id="selectedMaterialLabel3" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;" GridPane.rowIndex="3">
+                              <Label fx:id="selectedMaterialLabel3" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.rowIndex="3">
                                  <padding>
                                     <Insets right="5.0" />
                                  </padding>
                               </Label>
-                              <Label fx:id="selectedMaterialLabel4" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;" GridPane.rowIndex="4">
+                              <Label fx:id="selectedMaterialLabel4" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.rowIndex="4">
                                  <padding>
                                     <Insets right="5.0" />
                                  </padding>
                               </Label>
-                              <Label fx:id="selectedMaterialLabel5" prefHeight="50.0" prefWidth="255.0" style="-fx-border-color: white;" GridPane.rowIndex="5">
+                              <Label fx:id="selectedMaterialLabel5" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.rowIndex="5">
                                  <padding>
                                     <Insets right="5.0" />
                                  </padding>
                               </Label>
-                              <Label prefHeight="30.0" prefWidth="144.0" text="hoeveelheid (m³):" GridPane.columnIndex="1" />
-                              <TextField fx:id="materialQuantityTF1" prefHeight="30.0" prefWidth="161.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="materialQuantityTF2" prefHeight="30.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField fx:id="materialQuantityTF3" prefHeight="30.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField fx:id="materialQuantityTF4" prefHeight="30.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField fx:id="materialQuantityTF5" prefHeight="15.0" prefWidth="117.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label prefHeight="30.0" prefWidth="105.0" text="hoeveelheid:" GridPane.columnIndex="1">
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding></Label>
+                              <TextField fx:id="materialQuantityTF1" minHeight="31.0" minWidth="20.0" prefColumnCount="0" prefHeight="31.0" prefWidth="107.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="materialQuantityTF2" minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="107.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="materialQuantityTF3" minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="107.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField fx:id="materialQuantityTF4" minHeight="0.0" minWidth="0.0" prefHeight="32.0" prefWidth="107.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField fx:id="materialQuantityTF5" minHeight="0.0" minWidth="0.0" prefWidth="0.0" styleClass="text-field-materiaal" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label prefHeight="30.0" prefWidth="105.0" text="eenheid:" GridPane.columnIndex="2">
+                                 <padding>
+                                    <Insets left="5.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="unitLabel1" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="unitLabel2" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="unitLabel3" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="unitLabel4" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="unitLabel5" prefHeight="50.0" prefWidth="255.0" styleClass="label-right" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                                 <padding>
+                                    <Insets right="5.0" />
+                                 </padding>
+                              </Label>
                            </children>
                            <VBox.margin>
-                              <Insets left="20.0" />
+                              <Insets left="20.0" right="20.0" />
                            </VBox.margin>
                         </GridPane>
                         <Pane prefHeight="95.0" prefWidth="408.0">
