--- a/src/FabLab/View/RegisterUser.fxml
+++ b/src/FabLab/View/RegisterUser.fxml
@@ -24,7 +24,7 @@
             <TextField fx:id="emailAdressTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <ComboBox fx:id="studyComboBox" onAction="#handleStudySelect" prefHeight="33.0" prefWidth="153.0" promptText="Opleiding" GridPane.rowIndex="4" />
             <TextField fx:id="studyTextField" prefWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label fx:id="studyLabel" prefHeight="29.0" prefWidth="319.0" styleClass="label-bright" text="Opleiding" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Label fx:id="studyLabel" prefHeight="29.0" prefWidth="319.0" styleClass="label-bright" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin></Label>
