--- a/src/FabLab/View/IdleScreen.fxml
+++ b/src/FabLab/View/IdleScreen.fxml
@@ -10,22 +10,63 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FabLab.View.IdleScreenController">
    <children>
       <ImageView fitHeight="172.0" fitWidth="634.0" layoutX="100.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Data/ua.png" />
          </image>
       </ImageView>
-      <Label layoutX="41.0" layoutY="186.0" prefHeight="93.0" prefWidth="718.0" styleClass="label-idleScreen" text="FabLab Monitoring System" textAlignment="CENTER">
+      <Label layoutX="41.0" layoutY="167.0" prefHeight="93.0" prefWidth="718.0" styleClass="label-idleScreen" text="FabLab Monitoring System" textAlignment="CENTER">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Label layoutX="29.0" layoutY="313.0" prefHeight="107.0" prefWidth="743.0" styleClass="label-idleScreenText" text="Gelieve uw universiteitskaart te scannen en uw keuze te maken alvorens machines te hanteren.">
+      <Label layoutX="29.0" layoutY="248.0" prefHeight="39.0" prefWidth="743.0" styleClass="label-idleScreenText" text="Gelieve uw universiteitskaart te scannen en uw keuze te maken alvorens machines te hanteren.">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
+      <Pane layoutX="237.0" layoutY="281.0" prefHeight="198.0" prefWidth="563.0">
+         <children>
+            <GridPane layoutX="7.0" prefHeight="198.0" prefWidth="563.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="UserLabel7" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <Label fx:id="MachineLabel1" prefHeight="21.0" prefWidth="280.0" GridPane.rowIndex="1" />
+                  <Label fx:id="UserLabel6" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Label fx:id="UserLabel5" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label fx:id="UserLabel4" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label fx:id="UserLabel3" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="UserLabel2" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="UserLabel1" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label styleClass="label-bright" text="gebruiker:" GridPane.columnIndex="1" />
+                  <Label fx:id="MachineLabel7" prefWidth="280.0" GridPane.rowIndex="7" />
+                  <Label fx:id="MachineLabel8" prefWidth="280.0" GridPane.rowIndex="8" />
+                  <Label fx:id="MachineLabel6" prefWidth="280.0" GridPane.rowIndex="6" />
+                  <Label fx:id="MachineLabel5" prefWidth="280.0" GridPane.rowIndex="5" />
+                  <Label fx:id="MachineLabel4" prefWidth="280.0" GridPane.rowIndex="4" />
+                  <Label fx:id="MachineLabel3" prefWidth="280.0" GridPane.rowIndex="3" />
+                  <Label fx:id="MachineLabel2" prefWidth="280.0" GridPane.rowIndex="2" />
+                  <Label styleClass="label-bright" text="Machines in gebruik:" />
+                  <Label fx:id="UserLabel8" prefWidth="280.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+               </children>
+            </GridPane>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
