--- a/src/FabLab/View/RegisterUser.fxml
+++ b/src/FabLab/View/RegisterUser.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -10,18 +11,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane prefHeight="398.0" prefWidth="500.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FabLab.View.RegisterUserController">
+<AnchorPane minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" styleClass="background" stylesheets="@FabLabApp_DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FabLab.View.RegisterUserController">
    <children>
-      <GridPane layoutX="30.0" layoutY="28.0" prefHeight="272.0" prefWidth="480.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <GridPane layoutX="233.0" layoutY="28.0" prefHeight="272.0" prefWidth="506.0" AnchorPane.leftAnchor="233.0" AnchorPane.rightAnchor="61.0" AnchorPane.topAnchor="10.0">
          <children>
             <Label prefHeight="29.0" prefWidth="91.0" styleClass="label-bright" text="Naam" />
             <Label prefHeight="29.0" prefWidth="91.0" styleClass="label-bright" text="Voornaam" GridPane.rowIndex="1" />
             <Label prefHeight="29.0" prefWidth="91.0" styleClass="label-bright" text="Rolnummer" GridPane.rowIndex="2" />
             <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" />
             <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="rolNumberTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="rolNumberTextField" prefHeight="39.0" prefWidth="398.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label prefHeight="29.0" prefWidth="91.0" styleClass="label-bright" text="E-mailadres" GridPane.rowIndex="3" />
-            <TextField fx:id="emailAdressTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="emailAdressTextField" prefHeight="39.0" prefWidth="335.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <ComboBox fx:id="studyComboBox" onAction="#handleStudySelect" prefHeight="33.0" prefWidth="153.0" promptText="Opleiding" GridPane.rowIndex="4" />
             <TextField fx:id="studyTextField" prefWidth="0.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label fx:id="studyLabel" prefHeight="29.0" prefWidth="319.0" styleClass="label-bright" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -31,8 +32,8 @@
             <Label fx:id="andereOpleidingLabel" prefHeight="29.0" prefWidth="319.0" styleClass="label-bright" text="andere opleiding:" GridPane.rowIndex="5" />
          </children>
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="142.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="338.0" minWidth="10.0" prefWidth="338.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="384.0" minWidth="10.0" prefWidth="178.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="430.0" minWidth="10.0" prefWidth="328.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints maxHeight="74.0" minHeight="5.0" prefHeight="50.0" vgrow="SOMETIMES" />
@@ -43,15 +44,20 @@
             <RowConstraints maxHeight="50.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <Button id="register" layoutX="62.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="60.0" prefWidth="140.0" styleClass="register" stylesheets="@FabLabApp_DarkTheme.css" text="Registreer">
+      <Button id="register" layoutX="87.0" layoutY="367.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="60.0" prefWidth="140.0" styleClass="register" stylesheets="@FabLabApp_DarkTheme.css" text="Registreer">
          <font>
             <Font size="8.0" />
          </font>
       </Button>
-      <Button layoutX="292.0" layoutY="307.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="60.0" prefWidth="140.0" styleClass="register" text="Annuleer">
+      <Button layoutX="534.0" layoutY="367.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="60.0" prefWidth="140.0" styleClass="register" text="Annuleer">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <image>
+            <Image url="@Data/ua.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
