--- a/src/FabLab/View/StopOtherPersonsSession.fxml
+++ b/src/FabLab/View/StopOtherPersonsSession.fxml
@@ -17,7 +17,7 @@
          </image>
       </ImageView>
       <Label layoutX="51.0" layoutY="165.0" prefHeight="21.0" prefWidth="488.0" text="De machine die u selecteerde is al in gebruik." />
-      <Label layoutX="51.0" layoutY="199.0" prefHeight="21.0" prefWidth="645.0" text="U heeft de mogelijkheid deze sessie stop te zetten, indien de vorige gebruier vergat uit te checken." />
+      <Label layoutX="51.0" layoutY="199.0" prefHeight="21.0" prefWidth="662.0" text="U heeft de mogelijkheid deze sessie stop te zetten, indien de vorige gebruiker vergat uit te checken." />
       <Label layoutX="51.0" layoutY="230.0" prefHeight="21.0" prefWidth="637.0" text="Gelieve te controleren of de machine niet in gebruik is alvorens deze sessie te stoppen." />
       <Button fx:id="stopButton" layoutX="117.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleStopButton" prefHeight="21.0" prefWidth="136.0" styleClass="register" text="sessie stoppen" />
       <Button fx:id="cancelButton" layoutX="523.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleCancelButton" styleClass="register" text="annuleer" />
